--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name=".activity.SignUpActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".activity.HomePageActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
