--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".activity.LoginActivity"
+            android:name="com.example.assemble.activity.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,15 +22,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.SignUpActivity"
+            android:name="com.example.assemble.activity.SignUpActivity"
             android:exported="true">
         </activity>
         <activity
-            android:name=".activity.NoteActivity"
+            android:name="com.example.assemble.activity.NoteActivity"
             android:exported="true">
         </activity>
         <activity
-            android:name=".activity.HomePageActivity"
+            android:name="com.example.assemble.activity.HomePageActivity"
             android:exported="true">
         </activity>
     </application>
