--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
             android:name="com.example.assemble.activity.HomePageActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name="com.example.assemble.activity.FlashcardsActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
