--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:exported="true">
         </activity>
         <activity
+            android:name="com.example.assemble.activity.NoteListsActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name="com.example.assemble.activity.HomePageActivity"
             android:exported="true">
         </activity>
