--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
             android:name="com.example.assemble.activity.FlashcardsActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name="com.example.assemble.activity.TodoFormActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
