--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:exported="true">
         </activity>
         <activity
+            android:name="com.example.assemble.activity.TodoListActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name="com.example.assemble.activity.TodoFormActivity"
             android:exported="true">
         </activity>
