--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,15 @@
             android:name="com.example.assemble.activity.HomePageActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name="com.example.assemble.activity.UserProfileActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name="com.example.assemble.activity.UserSettingsActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
