--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,10 @@
             android:name="com.example.assemble.activity.TodoFormActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name="com.example.assemble.activity.PomodoroActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
